# Document_Processor

./: .gitignore  .pyre_configuration  Blueprint-Document_Processor_v1.1.txt  README.md  pyproject.toml  pyrightconfig.json
config/: default.yaml
scripts/: check_jsonl.py  create_sample_pdf.py  debug_probe.py
src/doc_preprocessor/: __init__.py  cli.py  orchestrator.py
src/doc_preprocessor/cache/: page_cache.py
src/doc_preprocessor/config/: loader.py
src/doc_preprocessor/export/: jsonl_writer.py  md_writer.py  report_writer.py
src/doc_preprocessor/extract/: __init__.py  base.py  native.py  ocr.py  router.py
src/doc_preprocessor/ingestion/: doc_id.py  loader.py
src/doc_preprocessor/models/: block.py  page_meta.py
src/doc_preprocessor/normalize/: header_footer.py  hyphen.py  whitespace.py
src/doc_preprocessor/probe/: analyzer.py  heuristics.py
src/doc_preprocessor/structure/: __init__.py  list_detector.py  reading_order.py  title_detector.py
src/doc_preprocessor/utils/: gpu.py  logger.py  timer.py
tests/unit/: test_hash.py  test_heuristics.py  test_normalize.py
